--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- HOME -->
     <section id="home">
         <h1>Hello, I'm <span>Laya M S</span></h1>
-        <p>Computer Science Engineering Student | Cloud & Networking Enthusiast</p>
+        <p>Computer Science Engineering Student</p>
     </section>
 
     <!-- ABOUT -->
