--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ footer{
   <div class="projects-grid">
 
     <div class="glass project-card">
-      <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f" alt="Finance Tracker">
+      <img src="c:\Users\hp\AppData\Local\Packages\Microsoft.ScreenSketch_8wekyb3d8bbwe\TempState\Snips\Screenshot 2025-12-14 201900.png" alt="Finance Tracker">
       <div class="project-content">
         <h3>Finance Tracker for Students</h3>
         <p>Expense tracking and budgeting platform for students.</p>
@@ -187,7 +187,7 @@ footer{
     </div>
 
     <div class="glass project-card">
-      <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836" alt="ChaatBazaar">
+      <img src="c:\Users\hp\AppData\Local\Packages\Microsoft.ScreenSketch_8wekyb3d8bbwe\TempState\Snips\Screenshot 2025-12-14 201620.png" alt="ChaatBazaar">
       <div class="project-content">
         <h3>ChaatBazaar</h3>
         <p>Marketplace connecting street vendors with suppliers.</p>
