--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@ document.querySelector('.cursor-ring').style.top=event.clientY+'px';
   <h2>My <span>Projects</span></h2>
   <div class="projects-grid">
     <div class="glass project-card">
-      <img src="c:\Users\hp\AppData\Local\Packages\Microsoft.ScreenSketch_8wekyb3d8bbwe\TempState\Snips\Screenshot 2025-12-14 211224.png">
-      <h3>Finance Tracker for Students</h3>
+      <img src="FinanceTracker.png">
+            <h3>Finance Tracker for Students</h3>
       <p>Budgeting and expense tracking platform.</p>
     </div>
     <div class="glass project-card">
-      <img src="c:\Users\hp\AppData\Local\Packages\Microsoft.ScreenSketch_8wekyb3d8bbwe\TempState\Snips\Screenshot 2025-12-14 211534.png">
+      <img src="ChaatBazar.png">
       <h3>ChaatBazaar – Street Vendor Marketplace</h3>
       <p>Connecting street vendors with suppliers.</p>
     </div>
